erDiagram
    User {
        string id PK
        string email UK
        string passwordHash
        string name
        enum role
        string status
        datetime createdAt
        datetime updatedAt
    }
    
    Department {
        string id PK
        string name UK
        datetime createdAt
        datetime updatedAt
    }
    
    Ticket {
        string id PK
        string subject
        string description
        enum status
        enum priority
        string customerId FK
        string assigneeId FK
        string departmentId FK
        datetime createdAt
        datetime updatedAt
    }
    
    Room {
        string id PK
        string ticketId FK
        boolean isActive
        datetime createdAt
    }
    
    Message {
        string id PK
        string roomId FK
        string senderId FK
        enum type
        string content
        string fileId FK
        datetime createdAt
    }
    
    FileAsset {
        string id PK
        string filename
        string mime
        int size
        string url
        string uploaderId FK
        datetime createdAt
    }
    
    Rating {
        string id PK
        string ticketId FK
        int score
        string comment
        datetime createdAt
    }
    
    AuditLog {
        string id PK
        string actorId FK
        string action
        string targetType
        string targetId
        json meta
        datetime createdAt
    }
    
    RefreshToken {
        string id PK
        string token UK
        string userId FK
        datetime expiresAt
        datetime createdAt
    }

    User ||--o{ Ticket : "creates"
    User ||--o{ Ticket : "assigned to"
    User ||--o{ Message : "sends"
    User ||--o{ FileAsset : "uploads"
    User ||--o{ AuditLog : "performs"
    User ||--o{ RefreshToken : "has"
    
    Department ||--o{ Ticket : "belongs to"
    
    Ticket ||--|| Room : "has"
    Ticket ||--o{ Message : "contains"
    Ticket ||--|| Rating : "rated"
    
    Room ||--o{ Message : "contains"
    
    Message }o--|| FileAsset : "references"
